@@ -1,7 +1,5 @@
 lib_LTLIBRARIES = liblightdm-gobject-1.la
 
-CLEANFILES =
-
 liblightdm_gobject_1_la_LDFLAGS = -export-symbols-regex \^lightdm_.*
 liblightdm_gobject_1_la_LIBADD = $(LIBLIGHTDM_GOBJECT_LIBS)
 liblightdm_gobject_1_la_CFLAGS = $(LIBLIGHTDM_GOBJECT_CFLAGS) \
@@ -34,14 +32,14 @@ liblightdm_gobject_1_la_SOURCES= \
 if HAVE_INTROSPECTION
 
 -include $(INTROSPECTION_MAKEFILE)
-INTROSPECTION_SCANNER_ARGS = --add-include-path=$(srcdir)
+INTROSPECTION_SCANNER_ARGS = --add-include-path=$(srcdir) --warn-all
 INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)
 
 INTROSPECTION_GIRS = LightDM-1.gir
 
 LightDM-1.gir: liblightdm-gobject-1.la
 LightDM_1_gir_INCLUDES = GObject-2.0
-LightDM_1_gir_CFLAGS = $(INCLUDES) --identifier-prefix=LightDM
+LightDM_1_gir_CFLAGS = $(INCLUDES) --symbol-prefix=lightdm
 LightDM_1_gir_LIBS = liblightdm-gobject-1.la
 LightDM_1_gir_FILES = $(liblightdm_gobject_1_la_SOURCES)
 
@@ -58,6 +56,10 @@ dist_vapi_DATA = liblightdm-gobject-1.vapi
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = liblightdm-gobject-1.pc
+
+CLEANFILES = \
+	$(gir_DATA) \
+	$(typelib_DATA)
 
 DISTCLEANFILES = \
 	Makefile.in \
