@@ -6,6 +6,7 @@ Overview of changes in lightdm 1.0.8
     * Fix object cleanup on exit
     * Fix lightdm --debug not working on newer GLib
     * Fix liblightdm-qt-1.pc linking against the wrong libraries
+    * Fix introspection bindings not containing any methods
 
 Overview of changes in lightdm 1.0.7
 
